# jrbenriquez.com

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  README.rst  database  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  render.yaml  setup.cfg
base/: models.py
base/migrations/: 0001_initial.py  0002_footertext.py
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blogpostpage.py  0003_blogpostgalleryimage.py  0004_author.py  0005_blogpostpage_authors.py  0006_blogposttag_blogpostpage_tags.py  0007_blogtagpage.py  0008_blogpostpage_content.py  0009_remove_blogpostpage_body.py  0010_alter_blogpostpage_content.py  0011_blogonlyindexpage_explainerindexpage_and_more.py
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  make.bat
docs/_source/: howto.rst  index.rst  users.rst
docs/explainer/: celery-primitives-explainer.html  wallet_addresses.html
home/: models.py
home/migrations/: 0003_homepage_body.py  0004_homepage_hero_cta_homepage_hero_cta_link_and_more.py  0005_homepage_self_photo_homepage_self_text.py
jrbenriquez/: conftest.py  urls.py  wsgi.py
jrbenriquez/settings/: base.py  dev.py  production.py
jrbenriquez/templates/: base.html
jrbenriquez/users/: admin.py  apps.py  models.py  urls.py
jrbenriquez/webpack_bundle/: apps.py
requirements/: local.txt  production.txt
styling/static_src/: package-lock.json
vue_frontend/: package-lock.json  package.json  tailwind.config.js  vue.config.js  webpack-stats.json
(+44 files in other folders)
