[tool.poetry]
name = "jrbenriquez-com"
version = "0.1.0"
description = "Personal site"
authors = ["John Rei Enriquez <johnrei.enriquez@gmail.com>"]
readme = "README.md"
packages = [{include = "jrbenriquez"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
django-tailwindcss = "^0.4.0"
django-htmx = "^1.21.0"
django-cotton = "^1.5.2"
wagtail = "^6.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
