[tool.poetry]
name = "jrbenriquez-com"
version = "0.1.0"
description = "Personal site"
authors = ["John Rei Enriquez <johnrei.enriquez@gmail.com>"]
readme = "README.md"
packages = [{include = "jrbenriquez"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
django-tailwindcss = "^0.4.0"
django-htmx = "^1.21.0"
django-cotton = "^1.5.2"
wagtail = "^6.3.2"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
psycopg2-binary = "^2.9.10"
dj-database-url = "^2.3.0"
whitenoise = {extras = ["brotli"], version = "^6.9.0"}
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
django-environ = "^0.12.0"
boto3 = "^1.37.4"
django-storages = "^1.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
